# ChainX

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  ChainX & Chain Layer2  Dockerfile  Makefile  README.md  btc_2.0.json  build.rs  package-lock.json  polkadotjs.md  rust-toolchain  traits.rs  xpallet_assets.rs
.github/: delete-merged-branch-config.yml
api/: Cargo.toml
api/src/: implement.rs  lib.rs
ci/: cmake.sh
cli/: Cargo.toml  build.rs  dot_tx.csv
cli/src/: chain_spec.rs  chainx_runtime.compact.wasm  chainx_runtime_wasm.compact.wasm  cli.rs  command.rs  config.rs  dev_genesis_node.csv  dev_team_council.csv  dot_tx.csv  genesis_config.rs  genesis_node.csv  lib.rs  logger.rs  mainnet_team_council.csv  native_rpc.rs  params.rs  res.rs  service.rs  testnet_genesis_node.csv  testnet_mohism_chainx_runtime.compact.wasm  testnet_team_council.csv
cli/src/genesis/: assets.rs  bitcoin.rs  mod.rs  trustees.rs
cli/src/genesis_config/: bitcoin.rs  chainx.rs  mod.rs  sdot.rs
cli/src/genesis_config/res/: testnet_genesis_node.csv
cli/src/res/: 12363395-epoch-change.data  3696763_regenesis_params.json  3696796_regenesis_params.json  3696822_regenesis_params.json  btc_genesis_header_mainnet.json  btc_genesis_header_testnet.json  btc_genesis_params_benchmarks.json  btc_genesis_params_mainnet.json  btc_genesis_params_regtest.json  btc_genesis_params_testnet.json  genesis_balances.json  genesis_balances_auto_claimed.json  genesis_balances_pure.json  genesis_builder_params.json  genesis_nominators.json  genesis_special_accounts.json  genesis_validators.json  genesis_xassets.json  genesis_xbtc_info.json  genesis_xbtc_miners.json  genesis_xminingasset.json  genesis_xstaking.json  testnet.json
cli/src/wasm/: chainx_runtime_testnet.compact.wasm
consensus/: Cargo.toml
consensus/src/: dynamic_inclusion.rs  error.rs  evaluation.rs  lib.rs  offline_tracker.rs  service.rs
contracts/: AssetsBridgeErc20.sol  AssetsBridgeErc20_OnlyAdmin.sol  AssetsBridgeErc20_OnlyOwner.sol  BitcoinAssetsErc20.sol  BitcoinAssetsErc20Factory.sol  ChainXBridge.sol  (+6 more)
cxrml/financialrecords/: Cargo.toml
cxrml/financialrecords/src/: lib.rs  tests.rs
cxrml/support/: Cargo.toml
cxrml/support/src/: lib.rs  tests.rs
cxrml/support/src/storage/: btree_map.rs  double_map.rs  linked_node.rs  mod.rs
cxrml/tokenbalances/: Cargo.toml
cxrml/tokenbalances/src/: lib.rs  mock.rs  tests.rs  utils.rs
executor/: Cargo.toml
executor/src/: lib.rs
frame/executive/: Cargo.toml
frame/executive/src/: lib.rs
frame/transaction-payment/: Cargo.toml
frame/transaction-payment/rpc/: Cargo.toml
frame/transaction-payment/rpc/runtime-api/: Cargo.toml
frame/transaction-payment/rpc/src/: lib.rs
frame/transaction-payment/src/: lib.rs
network/: Cargo.toml
network/src/: consensus.rs  lib.rs
pool/: Cargo.toml
pool/src/: error.rs  lib.rs  pool.rs
primitives/: Cargo.toml
primitives/assets-registrar/: Cargo.toml
primitives/assets-registrar/src/: lib.rs
primitives/gateway/bitcoin/: Cargo.toml
primitives/gateway/bitcoin/src/: detector.rs  extractor.rs  lib.rs  types.rs  utils.rs
primitives/gateway/common/: Cargo.toml
primitives/gateway/common/src/: lib.rs
primitives/genesis-builder/: Cargo.toml
primitives/genesis-builder/src/: genesis_params.rs  lib.rs  regenesis_params.rs
primitives/io/: Cargo.toml
primitives/io/src/: lib.rs
primitives/logging/: Cargo.toml
primitives/logging/src/: lib.rs
primitives/mining/: Cargo.toml
primitives/mining/common/: Cargo.toml
primitives/mining/common/src/: lib.rs
primitives/mining/src/: lib.rs
primitives/mining/staking/: Cargo.toml
primitives/mining/staking/src/: lib.rs
primitives/protocol/: Cargo.toml
primitives/protocol/src/: asset.rs  lib.rs  network.rs
primitives/rpc/: Cargo.toml
primitives/rpc/src/: lib.rs
primitives/runtime/: Cargo.toml
primitives/runtime/src/: lib.rs
primitives/src/: lib.rs
primitives/staking/: Cargo.toml
primitives/staking/src/: lib.rs  vote_weight.rs
rpc/: Cargo.toml
rpc/src/: apis.rs  errors.rs  helpers.rs  impls.rs  lib.rs  metadata.rs  servers.rs  subscriptions.rs  types.rs  utils.rs
rpc/src/author/: error.rs  hash.rs  mod.rs  tests.rs
rpc/src/chain/: error.rs  mod.rs  number.rs  tests.rs
rpc/src/chainext/: error.rs  mod.rs
rpc/src/chainx/: cache.rs  chainx_impl.rs  chainx_trait.rs  def.rs  error.rs  impl_rpc.rs  mod.rs  types.rs  utils.rs
rpc/src/chainx/types/: mod.rs  xstaking_types.rs  xtokens_types.rs
rpc/src/state/: error.rs  mod.rs  tests.rs
rpc/src/system/: error.rs  helpers.rs  mod.rs  tests.rs
runtime/: Cargo.toml  build.rs  runtime.rs
runtime-api/: Cargo.toml
runtime-api/src/: lib.rs
runtime/chainx/: Cargo.toml  build.rs
runtime/chainx/src/: constants.rs  impls.rs  lib.rs  migrations.rs
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs
runtime/dev/: Cargo.toml  build.rs
runtime/dev/src/: constants.rs  impls.rs  lib.rs  migrations.rs
runtime/malan/: Cargo.toml
runtime/malan/src/: constants.rs  impls.rs  lib.rs  migrations.rs  precompiles.rs  withdraw.rs
runtime/src/: checked_block.rs  constants.rs  erc20_fee.rs  fee.rs  impls.rs  lib.rs  runtime.rs  tests.rs  trustee.rs  xcontracts_fee.rs  xexecutive.rs
runtime/src/weights/: mod.rs  pallet_collective.rs  pallet_democracy.rs  pallet_elections_phragmen.rs  pallet_identity.rs  pallet_indices.rs  pallet_multisig.rs  pallet_scheduler.rs  pallet_treasury.rs  xpallet_assets_registrar.rs  xpallet_dex_spot.rs  xpallet_mining_asset.rs  xpallet_mining_staking.rs
runtime/staking/: Cargo.toml
runtime/staking/src/: genesis_config.rs
runtime/testnet/: Cargo.toml
runtime/testnet/src/: constants.rs  lib.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
service/: Cargo.toml
service/src/: client.rs  lib.rs
test/: Cargo.toml
test/src/: lib.rs
xr-primitives/: Cargo.toml
xr-primitives/src/: lib.rs  traits.rs
xr-primitives/src/generic/: b58.rs  checked_extrinsic.rs  extracter.rs  extractor.rs  mod.rs  unchecked_mortal_compact_extrinsic.rs  unchecked_mortal_extrinsic.rs
(+709 files in other folders)
