[package]
name = "chainx"
version = "2.0.9"
authors = ["The ChainX Authors"]
edition = "2018"
description = "Fully Decentralized Interchain Crypto Asset Management on Polkadot"

[dependencies]
cli = { package = "chainx-cli", path = "cli" }

[target.'cfg(target_arch="x86_64")'.dependencies]
cli = { package = "chainx-cli", path = "cli", features = ["wasmtime"] }

[patch.crates-io]
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-informant = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-bounties = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-indices = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-tips = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

[workspace]
members = [
  "executor",
  "primitives",
  "primitives/assets-registrar",
  "primitives/gateway/bitcoin",
  "primitives/gateway/common",
  "primitives/genesis-builder",
  "primitives/io",
  "primitives/mining/common",
  "primitives/mining/staking",
  "primitives/protocol",
  "primitives/rpc",
  "primitives/runtime",
  "runtime/chainx",
  "runtime/dev",
  "runtime/malan",

  "xpallets/assets",
  "xpallets/assets/rpc",
  "xpallets/assets/rpc/runtime-api",
  "xpallets/assets-registrar",
  "xpallets/dex/spot",
  "xpallets/dex/spot/rpc",
  "xpallets/dex/spot/rpc/runtime-api",
  "xpallets/gateway/bitcoin/v1",
  "xpallets/gateway/common",
  "xpallets/gateway/common/rpc",
  "xpallets/gateway/common/rpc/runtime-api",
  "xpallets/gateway/records",
  "xpallets/gateway/records/rpc",
  "xpallets/gateway/records/rpc/runtime-api",
  "xpallets/genesis-builder",
  "xpallets/mining/asset",
  "xpallets/mining/asset/rpc",
  "xpallets/mining/asset/rpc/runtime-api",
  "xpallets/mining/staking",
  "xpallets/mining/staking/rpc",
  "xpallets/mining/staking/rpc/runtime-api",
  "xpallets/support",
  "xpallets/system",
  "xpallets/transaction-fee",
  "xpallets/transaction-fee/rpc",
  "xpallets/transaction-fee/rpc/runtime-api",
]

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
panic = "unwind"

[features]
runtime-benchmarks = ["cli/runtime-benchmarks"]
