[package]
name = "chainx"
version = "4.0.0"
authors = ["The ChainX Authors"]
edition = "2018"
description = "Fully Decentralized Interchain Crypto Asset Management on Polkadot"

[dependencies]
cli = { package = "chainx-cli", path = "cli" }

[target.'cfg(target_arch="x86_64")'.dependencies]
cli = { package = "chainx-cli", path = "cli", features = ["wasmtime"] }

[patch."https://github.com/paritytech/substrate"]

sp-api = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-application-crypto = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-arithmetic = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-authority-discovery = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-blockchain = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-block-builder = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-consensus = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-consensus-babe = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-consensus-slots = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-consensus-vrf = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-core = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-database = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-externalities = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-finality-grandpa = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-inherents = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-io = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-keystore = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-offchain = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-runtime = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-runtime-interface = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-session = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-staking = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-state-machine = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-std = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-storage = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-timestamp = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-tracing = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-transaction-pool = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-trie = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-version = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sp-wasm-interface = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }

sc-client-api = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sc-transaction-pool-api = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
sc-utils = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }


frame-executive = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
frame-support = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
frame-system = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
frame-system-rpc-runtime-api = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }

pallet-authorship = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-babe = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-balances = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-collective = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-democracy = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-elections-phragmen = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-grandpa = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-identity = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-im-online = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-indices = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-membership = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-multisig = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-offences = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-proxy = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-scheduler = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-session = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-sudo = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-timestamp = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-transaction-payment = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-treasury = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }
pallet-utility = { git = "https://github.com/chainx-org/substrate", rev = "79f50470dadedec5c54461eea5ce7d468d054371" }

[workspace]
members = [
  "cli",
  "executor",
  "primitives",
  "primitives/assets-registrar",
  "primitives/gateway/bitcoin",
  "primitives/gateway/common",
  "primitives/genesis-builder",
  "primitives/io",
  "primitives/mining/common",
  "primitives/mining/staking",
  "primitives/protocol",
  "primitives/rpc",
  "primitives/runtime",
  "rpc",
  "runtime/chainx",
  "runtime/dev",
  "runtime/malan",
  "service",

  "xpallets/assets",
  "xpallets/assets/rpc",
  "xpallets/assets/rpc/runtime-api",
  "xpallets/assets-registrar",
  "xpallets/dex/spot",
  "xpallets/dex/spot/rpc",
  "xpallets/dex/spot/rpc/runtime-api",
  "xpallets/gateway/bitcoin",
  "xpallets/gateway/common",
  "xpallets/gateway/common/rpc",
  "xpallets/gateway/common/rpc/runtime-api",
  "xpallets/gateway/records",
  "xpallets/gateway/records/rpc",
  "xpallets/gateway/records/rpc/runtime-api",
  "xpallets/genesis-builder",
  "xpallets/mining/asset",
  "xpallets/mining/asset/rpc",
  "xpallets/mining/asset/rpc/runtime-api",
  "xpallets/mining/staking",
  "xpallets/mining/staking/rpc",
  "xpallets/mining/staking/rpc/runtime-api",
  "xpallets/support",
  "xpallets/system",
  "xpallets/transaction-fee",
  "xpallets/transaction-fee/rpc",
  "xpallets/transaction-fee/rpc/runtime-api",
]

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
panic = "unwind"

[features]
runtime-benchmarks = ["cli/runtime-benchmarks"]
try-runtime = ["cli/try-runtime"]
