[package]
name = "chainx"
version = "4.1.0"
authors = ["The ChainX Authors"]
edition = "2018"
description = "Fully Decentralized Interchain Crypto Asset Management on Polkadot"

[dependencies]
cli = { package = "chainx-cli", path = "cli" }

[target.'cfg(target_arch="x86_64")'.dependencies]
cli = { package = "chainx-cli", path = "cli", features = ["wasmtime"] }

[workspace]
members = [
  "cli",
  "executor",
  "primitives",
  "primitives/assets-registrar",
  "primitives/gateway/bitcoin",
  "primitives/gateway/common",
  "primitives/genesis-builder",
  "primitives/io",
  "primitives/mining/common",
  "primitives/mining/staking",
  "primitives/protocol",
  "primitives/rpc",
  "primitives/runtime",
  "rpc",
  "runtime/chainx",
  "runtime/dev",
  "runtime/malan",
  "service",

  "xpallets/assets",
  "xpallets/assets/rpc",
  "xpallets/assets/rpc/runtime-api",
  "xpallets/assets-registrar",
  "xpallets/dex/spot",
  "xpallets/dex/spot/rpc",
  "xpallets/dex/spot/rpc/runtime-api",
  "xpallets/gateway/bitcoin",
  "xpallets/gateway/bitcoin/rpc",
  "xpallets/gateway/bitcoin/rpc/runtime-api",
  "xpallets/gateway/common",
  "xpallets/gateway/common/rpc",
  "xpallets/gateway/common/rpc/runtime-api",
  "xpallets/gateway/records",
  "xpallets/gateway/records/rpc",
  "xpallets/gateway/records/rpc/runtime-api",
  "xpallets/genesis-builder",
  "xpallets/mining/asset",
  "xpallets/mining/asset/rpc",
  "xpallets/mining/asset/rpc/runtime-api",
  "xpallets/mining/staking",
  "xpallets/mining/staking/rpc",
  "xpallets/mining/staking/rpc/runtime-api",
  "xpallets/support",
  "xpallets/system",
  "xpallets/transaction-fee",
  "xpallets/transaction-fee/rpc",
  "xpallets/transaction-fee/rpc/runtime-api",
]

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
panic = "unwind"

[features]
runtime-benchmarks = ["cli/runtime-benchmarks"]
try-runtime = ["cli/try-runtime"]
