[package]
name = "chainx-api"
version = "0.1.0"
authors = ["Chainpool <http://www.chainx.org>"]

[dependencies]
sr-primitives = { git = "https://github.com/paritytech/substrate" }
srml-executive = { git = "https://github.com/paritytech/substrate" }
sr-io = { git = "https://github.com/paritytech/substrate" }
substrate-primitives = { git = "https://github.com/paritytech/substrate" }
substrate-client-db = { git = "https://github.com/paritytech/substrate" }
substrate-executor = { git = "https://github.com/paritytech/substrate" }
substrate-client = { git = "https://github.com/paritytech/substrate" }
chainx-primitives = { path = "../primitives" }
chainx-executor = { path = "../executor" }
chainx-runtime = { path = "../runtime" }
parity-codec = { version = "^1.0" }
log = "0.3"
