[package]
name = "chainx-cli"
version = "2.0.8-1"
authors = ["The ChainX Authors"]
description = "Implementation of protocol https://chainx.org in Rust based on the Substrate framework."
edition = "2018"

[dependencies]
futures = "0.3.4"
log = "0.4.8"
log4rs = { version = "0.12", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
hex = "0.4"
hex-literal = "0.3.1"
jsonrpc-pubsub = "15.0.0"
parking_lot = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.8"

# Substrate client
sc-authority-discovery = "0.9.0"
sc-basic-authorship = "0.9.0"
sc-chain-spec = "3.0.0"
sc-client-api = "3.0.0"
sc-consensus = "0.9.0"
sc-consensus-babe = "0.9.0"
sc-consensus-slots = "0.9.0"
sc-executor = "0.9.0"
sc-finality-grandpa = "0.9.0"
sc-finality-grandpa-warp-sync = { git = "https://github.com/paritytech/substrate", rev = "49a4103f4bfef55be20a5c6d26e18ff3003c3353", optional = true }
sc-network = "0.9.0"
sc-rpc = "3.0.0"
sc-transaction-pool = "3.0.0"
sc-telemetry = "3.0.0"

frame-benchmarking-cli = { version = "3.0.0", optional = true }
sc-cli = { version = "0.9.0", optional = true }
sc-service = { version = "0.9.0", optional = true }

# Substrate primitives
sp-authority-discovery = "3.0.0"
sp-core = "3.0.0"
sp-consensus = "0.9.0"
sp-consensus-babe = "0.9.0"
sp-finality-grandpa = "3.0.0"
sp-inherents = "3.0.0"
sp-runtime = "3.0.0"
sp-transaction-pool = "3.0.0"

# Substrate pallets
pallet-im-online = "3.0.0"

chainx-executor = { path = "../executor" }
chainx-primitives = { path = "../primitives" }
chainx-rpc = { path = "../rpc" }
chainx-service = { path = "../service" }
chainx-runtime = { path = "../runtime/chainx" }
dev-runtime = { path = "../runtime/dev" }
malan-runtime = { path = "../runtime/malan" }

xp-assets-registrar = { path  = "../primitives/assets-registrar" }
xp-genesis-builder = { path  = "../primitives/genesis-builder" }
xp-protocol = { path = "../primitives/protocol" }

xpallet-gateway-bitcoin = { path  = "../xpallets/gateway/bitcoin" }
xpallet-gateway-common = { path  = "../xpallets/gateway/common" }

[build-dependencies]
substrate-build-script-utils = "3.0.0"

[features]
default = ["cli"]
cli = [
    "sc-cli",
    "sc-service",
    "sc-finality-grandpa-warp-sync",
    "frame-benchmarking-cli",
    "chainx-executor/wasmi-errno",
]
wasmtime = [
    "sc-cli/wasmtime",
    "sc-service/wasmtime",
    "chainx-executor/wasmtime",
]
runtime-benchmarks = [
    "chainx-runtime/runtime-benchmarks",
    "dev-runtime/runtime-benchmarks",
    "malan-runtime/runtime-benchmarks",
]
