[package]
name = "chainx-cli"
version = "5.2.1"
authors = ["The ChainX Authors"]
description = "Implementation of protocol https://chainx.org in Rust based on the Substrate framework."
edition = "2021"

[dependencies]
futures = "0.3.17"
log = "0.4.8"
log4rs = { version = "0.12", features = [ "rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller" ] }
hex = "0.4"
hex-literal = "0.3.1"
jsonrpc-pubsub = "18.0.0"
parking_lot = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.0", features = ["derive"] }

# Substrate client
sc-authority-discovery = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-basic-authorship = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-chain-spec = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-client-api = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-consensus = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-consensus-babe = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-consensus-slots = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-executor = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-finality-grandpa = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-network = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-rpc = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-sync-state-rpc = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-transaction-pool = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sc-telemetry = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }

frame-benchmarking-cli = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2", optional = true }
sc-cli = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2", optional = true }
sc-service = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2", optional = true }
try-runtime-cli = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2", optional = true }

# Substrate primitives
sp-authority-discovery = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-core = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-consensus = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-consensus-babe = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-finality-grandpa = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-inherents = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-runtime = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }
sp-transaction-pool = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }

# Substrate pallets
pallet-im-online = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }

chainx-executor = { path = "../executor" }
chainx-primitives = { path = "../primitives" }
chainx-service = { path = "../service" }
chainx-runtime = { path = "../runtime/chainx" }
dev-runtime = { path = "../runtime/dev" }
malan-runtime = { path = "../runtime/malan" }

xp-assets-registrar = { path = "../primitives/assets-registrar" }
xp-genesis-builder = { path = "../primitives/genesis-builder" }
xp-protocol = { path = "../primitives/protocol" }

xpallet-gateway-bitcoin = { path = "../xpallets/gateway/bitcoin" }
xpallet-gateway-common = { path = "../xpallets/gateway/common" }
xpallet-btc-ledger = { path = "../xpallets/btc-ledger" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/chainx-org/substrate", branch = "polkadot-v0.9.18-fix2" }

[features]
default = ["cli"]
cli = [
  "sc-cli",
  "sc-service",
  "frame-benchmarking-cli",
  "chainx-executor/wasmi-errno",
  "try-runtime-cli"
]
wasmtime = [
  "sc-cli/wasmtime",
  "sc-service/wasmtime",
  "chainx-executor/wasmtime",
]
runtime-benchmarks = [
  "chainx-runtime/runtime-benchmarks",
  "dev-runtime/runtime-benchmarks",
  "malan-runtime/runtime-benchmarks",
]
try-runtime = [
  "try-runtime-cli",
  "chainx-runtime/try-runtime",
  "dev-runtime/try-runtime",
  "malan-runtime/try-runtime"
]
