[package]
name = "chainx-executor"
version = "2.0.9"
authors = ["The ChainX Authors"]
edition = "2018"

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

# ChainX runtime
chainx-runtime = { path = "../runtime/chainx" }
dev-runtime = { path = "../runtime/dev" }
malan-runtime = { path = "../runtime/malan" }

# ChainX primitives
xp-io = { path = "../primitives/io" }

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
    "sc-executor/wasmi-errno",
]
