[package]
name = "chainx-executor"
version = "5.0.0"
authors = ["The ChainX Authors"]
edition = "2021"

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# ChainX runtime
chainx-runtime = { path = "../runtime/chainx" }
dev-runtime = { path = "../runtime/dev" }
malan-runtime = { path = "../runtime/malan" }

# ChainX primitives
xp-io = { path = "../primitives/io" }

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
    "sc-executor/wasmi-errno",
]
